; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/partitions/extr_check.c_disk_name.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/partitions/extr_check.c_disk_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gendisk = type { i8* }

@BDEVNAME_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"%sp%d\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"%s%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @disk_name(%struct.gendisk* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.gendisk*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.gendisk* %0, %struct.gendisk** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %16, label %9

9:                                                ; preds = %3
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* @BDEVNAME_SIZE, align 4
  %12 = load %struct.gendisk*, %struct.gendisk** %4, align 8
  %13 = getelementptr inbounds %struct.gendisk, %struct.gendisk* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  %15 = call i32 (i8*, i32, i8*, i8*, ...) @snprintf(i8* %10, i32 %11, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %14)
  br label %47

16:                                               ; preds = %3
  %17 = load %struct.gendisk*, %struct.gendisk** %4, align 8
  %18 = getelementptr inbounds %struct.gendisk, %struct.gendisk* %17, i32 0, i32 0
  %19 = load i8*, i8** %18, align 8
  %20 = load %struct.gendisk*, %struct.gendisk** %4, align 8
  %21 = getelementptr inbounds %struct.gendisk, %struct.gendisk* %20, i32 0, i32 0
  %22 = load i8*, i8** %21, align 8
  %23 = call i32 @strlen(i8* %22)
  %24 = sub nsw i32 %23, 1
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8, i8* %19, i64 %25
  %27 = load i8, i8* %26, align 1
  %28 = call i64 @isdigit(i8 signext %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %38

30:                                               ; preds = %16
  %31 = load i8*, i8** %6, align 8
  %32 = load i32, i32* @BDEVNAME_SIZE, align 4
  %33 = load %struct.gendisk*, %struct.gendisk** %4, align 8
  %34 = getelementptr inbounds %struct.gendisk, %struct.gendisk* %33, i32 0, i32 0
  %35 = load i8*, i8** %34, align 8
  %36 = load i32, i32* %5, align 4
  %37 = call i32 (i8*, i32, i8*, i8*, ...) @snprintf(i8* %31, i32 %32, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* %35, i32 %36)
  br label %46

38:                                               ; preds = %16
  %39 = load i8*, i8** %6, align 8
  %40 = load i32, i32* @BDEVNAME_SIZE, align 4
  %41 = load %struct.gendisk*, %struct.gendisk** %4, align 8
  %42 = getelementptr inbounds %struct.gendisk, %struct.gendisk* %41, i32 0, i32 0
  %43 = load i8*, i8** %42, align 8
  %44 = load i32, i32* %5, align 4
  %45 = call i32 (i8*, i32, i8*, i8*, ...) @snprintf(i8* %39, i32 %40, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8* %43, i32 %44)
  br label %46

46:                                               ; preds = %38, %30
  br label %47

47:                                               ; preds = %46, %9
  %48 = load i8*, i8** %6, align 8
  ret i8* %48
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, ...) #1

declare dso_local i64 @isdigit(i8 signext) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
